src/main/java/com/example/carrie/errors/custom/Conflict.java
package com.example.carrie.errors.custom;

public class Conflict extends RuntimeException {

  public Conflict(String message) {
    super(message);
  }

}
